--- a/docs/LeetCode/树/重建二叉树.md
+++ b/docs/LeetCode/树/重建二叉树.md
@@ -10,11 +10,11 @@
  4. 用哈希表记录中序遍历的值与对应下标
  5. 从根节点`index`开始递归构建左子树和右子树
     * 左子树：前序遍历的`[index+1,左子树数量]`对应中序遍历的`[left,index-1]`
-    * 右子树：前序遍历的`[index+左子树数量,右子树数量]`对应中序遍历的`[index+1,right]`
+    * 右子树：前序遍历的`[index+左子树数量(index-left+1),右子树数量]`对应中序遍历的`[index+1,right]`
 ### 题解
 ```java
 class Solution {
-        HashMap<Integer,Integer> map=new HashMap<>();
+    HashMap<Integer,Integer> map=new HashMap<>();
     public TreeNode buildTree(int[] preorder, int[] inorder) {
         int i=0;
         for(int in:inorder){
