--- a/docs/LeetCode/树/重建二叉树.md
+++ b/docs/LeetCode/树/重建二叉树.md
@@ -3,7 +3,7 @@
 假设输入的前序遍历和中序遍历的结果中都不含重复的数字。
 
  
-### 思路
+### 思路1
  1. 前序遍历的**首元素** 为 树的根节点 `node` 的值。
  2. 在中序遍历中搜索根节点` node `的索引 ，可将 中序遍历 划分为 `[ 左子树 | 根节点 | 右子树 ] `。
  3. 根据中序遍历中的`左（右）子树`的节点数量，可将 前序遍历 划分为 `[ 根节点 | 左子树 | 右子树 ]` 。
@@ -32,6 +32,36 @@ class Solution {
         node.left=helper(left,index-1,idx+1,preorder,inorder);
         node.right=helper(index+1,right,idx+index-left+1,preorder,inorder);
         return node;
+    }
+}
+```
+### 思路2  
+类似思路1，可以发现重建树的过程其实是一个前序遍历的过程，因此维护一个全局的变量`index`从0开始，每取一次根节点就`+1`,用来代替思路1中函数的根节点位置（idx）
+### 题解
+```java
+class Solution {
+    int index=0;
+    Map<Integer,Integer> idx_map=new HashMap<Integer, Integer>();
+    public TreeNode helper(int left,int right,int[] preorder, int[] inorder)
+    {
+        if(left>right)//终止递归条件
+        return null;
+        int val=preorder[index];
+        TreeNode root=new TreeNode(val);
+        int Index=idx_map.get(val);//中序遍历中找到根节点
+        index++;
+        root.left=helper(left,Index-1,preorder,inorder);
+        root.right=helper(Index+1,right,preorder,inorder);
+        return root;
+    }
+    public TreeNode buildTree(int[] preorder, int[] inorder) {
+        // 建立（元素，下标）键值对的哈希表
+        int idx = 0;
+        for (Integer val : inorder) {
+            idx_map.put(val, idx++);
+        }
+        
+        return helper(0, inorder.length - 1,preorder,inorder);
     }
 }
 ```
