--- a/docs/Network/传输层.md
+++ b/docs/Network/传输层.md
@@ -128,7 +128,16 @@ TCP使用重传机制实现可靠传输
 首部字段只有 8 个字节，包括源端口、目的端口、长度、检验和。12 字节的伪首部是为了计算检验和临时添加的。
 
 ## TCP和UDP区别
-
+| |TCP | UDP|
+|:-:|:-:|:-:|
+|连接性|面向连接|无连接|
+|可靠性|可靠|不可靠|
+|传输方式|面向字节流|面向报文
+|传输速度|慢|快|
+|双工性|全双工，一对一|一对一，一对多，多对多|
+|流量控制/拥塞控制|有|无|
+|应用场景|效率要求低，准确性要求高，如：文件传输，邮件发送|效率要求高，准确性要求低，如音视频通信，直播
+|应用层协议|SMTP（电子邮件）、TELNET（远程登录控制）、HTTP、FTP|DNS、TFTP（文件传输）、DHCP（动态主机配置）...
 
 ## 参考
 * 计算机网络，谢希仁
