--- a/docs/数据库/数据库基础.md
+++ b/docs/数据库/数据库基础.md
@@ -21,6 +21,96 @@
 * 1NF：属性不可再分。
 * 2NF：1NF 的基础之上，消除了非主属性对于码的部分函数依赖。
 * 3NF：3NF 在 2NF 的基础之上，消除了非主属性对于码的传递函数依赖 。
-## 事务
 
-## 四种隔离级别
+## 事务(Transaction)
+
+事务是一个操作序列，不可分割的工作单位，以BEGIN TRANSACTION开始，以ROLLBACK/COMMIT结束
+
+特性(ACID)：
+* 原子性（Atomicity）：逻辑上是不可分割的操作单元，事务的所有操作要么全部提交成功，要么全部失败回滚
+* 一致性（Consistency）：事务的执行必须使数据库保持一致性状态。在一致性状态下，所有事务对一个数据的读取结果都是相同的
+* 隔离性（Isolation）：一个事务所做的修改在最终提交以前，对其它事务是不可见的（并发执行的事务之间不能相互影响）；
+* 持久性（Durability）：一旦事务提交成功，对数据的修改是永久性的
+
+### 事务的并发问题
+* 脏读:事务A读取了事务B更新的数据，然后B回滚操作，那么A读取到的数据是脏数据
+* 不可重复读:事务 A 多次读取同一数据，事务 B 在事务A多次读取的过程中，对数据作了更新并提交，导致事务A多次读取同一数据时，结果 不一致。
+* 幻读:事务A读取某范围内数据并修改，这时B插入或删除了一条，A修改结束后发现还有一条记录没有改，就像幻觉一样。
+
+>幻读侧重于新增或删除，不可重复度侧重于修改
+### 事务四种隔离级别
+* 未提交读（Read Uncommited）：在一个事务提交之前，它的执行结果对其它事务也是可见的。会导致脏读、不可重复读、幻读；
+* 提交读（Read Commited）：一个事务只能看见已经提交的事务所作的改变。可避免脏读问题；
+* 可重复读（Repeatable Read）：可以确保同一个事务在多次读取同样的数据时得到相同的结果。（MySQL的默认隔离级别）。可避免不可重复读；(MYSQL的默认隔离级别)
+* 可串行化（Serializable）：强制事务串行执行，使之不可能相互冲突，从而解决幻读问题。可能导致大量的超时现象和锁竞争，实际很少使用。
+
+|         事务隔离级别         | 脏读  | 不可重复读 | 幻读  |
+| :--------------------------: | :---: | :--------: | :---: |
+| 读未提交（read-uncommitted） |  是   |     是     |  是   |
+| 不可重复读（read-committed） |  否   |     是     |  是   |
+| 可重复读（repeatable-read）  |  否   |     否     |  是   |
+|    串行化（serializable）    |  否   |     否     |  否   |
+
+## 乐观锁和悲观锁
+* 悲观锁：认为数据随时会被修改，因此每次读取数据之前都会上锁，防止其它事务读取或修改数据；应用于数据更新比较频繁的场景；
+* 乐观锁：操作数据时不会上锁，但是更新时会判断在此期间有没有别的事务更新这个数据，若被更新过，则失败重试；适用于读多写少的场景。乐观锁的实现方式有：
+    * 加一个版本号或者时间戳字段，每次数据更新时同时更新这个字段；
+    * 先读取想要更新的字段或者所有字段，更新的时候比较一下，只有字段没有变化才进行更新
+
+## 封锁
+### 封锁粒度
+MYSQL提供了两种封锁粒度：行级锁以及表级锁。
+
+封锁粒度越小，即锁定的数据量越少，发生锁争用的可能性越小，并发程度越高
+
+但是加锁需要消耗资源，增加系统开销。因此封锁粒度越小，系统开销越大。
+### 封锁类型
+* 意向锁(Intention Locks):InnoDB自动加，无需用户干预。
+    * 一个事务在获得某个数据行对象的 S 锁之前，必须先获得整个表的 IS 锁或更强的锁；
+    * 一个事务在获得某个数据行对象的 X 锁之前，必须先获得整个表的 IX 锁；
+    * IS/IX 锁之间都是兼容的；
+    * **好处:** 如果一个事务想要对整个表加X锁，就需要先检测是否有其它事务对该表或者该表中的某一行加了锁，这种检测非常耗时。有了意向锁之后，只需要检测整个表是否存在IX/IS/X/S锁就行了
+* 排它锁(Exclusive Lock):又叫写锁，简写X锁。事务对数据加上X锁时，只允许此事务读取和修改此数据，并且其它事务不能对该数据加任何锁；( 对于 UPDATE、 DELETE 和 INSERT 语句;SELECT ... FOR UPDATE) 
+  
+* 共享锁(Shared Lock):又叫读锁，简写S锁。加了S锁后，该事务只能对数据进行读取而不能修改，并且其它事务只能加S锁，不能加X锁(SELECT ... LOCK In SHARE MODE)
+
+
+### 封锁协议
+#### 三级封锁协议
+* 一级封锁协议:事务在修改之前必须先对其加X锁，直到事物结束后释放。**解决丢失修改问题**(即两个事务不能同时对一个数据进行修改，避免修改被覆盖)
+* 二级封锁协议:在一级的基础上，事务在读取数据之前必须先加S锁，**读完后释放**。可以解决脏读问题（如果已经有事务在修改数据，就意味着已经加了X锁，此时想要读取数据的事务并不能加S锁，也就无法进行读取，避免了读取脏数据）；
+* 三级封锁协议:在二级的基础上，事务在读取数据之前必须先加S锁，**直到事务结束才能释放**。可以解决不可重复读问题（避免了在事务结束前其它事务对数据加X锁进行修改，保证了事务期间数据不会被其它事务更新）
+
+#### 两段锁协议
+事务必须严格分为两个阶段对数据进行加锁和解锁的操作，第一阶段加锁，第二阶段解锁。也就是说**一个事务中一旦释放了锁，就不能再申请新锁了。**
+
+可串行化调度是指，通过并发控制，使得并发执行的事务结果与某个串行执行的事务结果相同。事务遵循两段锁协议是保证可串行化调度的充分条件。
+## 多版本并发控制(MVCC)
+
+**概念**:多版本并发控制（Multi-Version Concurrency Control, MVCC），MVCC在每行记录后面都保存有两个隐藏的列，用来存储创建版本号和删除版本号。
+* **创建版本号**：创建一个数据行时的事务版本号（事务版本号：事务开始时的系统版本号；系统版本号：每开始一个新的事务，系统版本号就会自动递增）；
+* **删除版本号**：删除操作时的事务版本号；
+* 各种操作：
+    * 插入操作时，记录创建版本号；
+    * 删除操作时，记录删除版本号；
+    * 更新操作时，先记录删除版本号，再新增一行记录创建版本号；
+    * 查询操作时，要符合以下条件才能被查询出来：删除版本号未定义或大于当前事务版本号（删除操作是在当前事务启动之后做的）；创建版本号小于或等于当前事务版本号（创建操作是事务完成或者在事务启动之前完成）
+
+* **当前读**:读取的是记录的最新版本，读取时保证其他并发事务不能修改当前记录，会对读取的记录加锁,例如：(共享锁，排它锁)
+* **快照读**:像不加锁的select操作就是快照读，即不加锁的非阻塞读；快照读的前提是隔离级别不是串行级别，串行级别下的快照读会退化成当前读。
+
+**MVCC优点**:
+* 在并发读写数据库时，可以做到在读操作时不用阻塞写操作，写操作也不用阻塞读操作，提高了数据库并发读写的性能
+* 同时还可以解决脏读，幻读，不可重复读等事务隔离问题，但不能解决更新丢失问题
+
+## Drop/Delete/Truncate的区别？
+
+|          |           Delete           |           Truncate           |           Drop           |
+| :------: | :----------------------: | :------------------------: | :--------------------------: |
+|   类型   |           DML            |            DDL             |             DDL              |
+|   回滚   |          可回滚          |          不可回滚          |           不可回滚           |
+| 删除内容 | 表结构还在，表的数据删除 | 表结构还在，数据全部被删除 | 表结构，索引，权限等全被删除 |
+| 删除速度 |       慢，逐行删除       |             快             |             最快             |
+>DDL:Data Definition Language,数据定义语言，对数据库中的某些对象(例如，database,table)进行管理，如Create,Alter和Drop.
+
+>DML:Data Manipulation Language,数据操纵语言，对数据库中的数据进行一些简单操作，如insert,delete,update,select等.
