--- a/docs/Network/应用层.md
+++ b/docs/Network/应用层.md
@@ -34,3 +34,13 @@ DNS用于将域名解析为IP地址
 
 
 ![](https://community-header-1306990603.cos.ap-guangzhou.myqcloud.com/20220106165403.png)
+
+>注意递归查询和迭代查询的区别
+
+### DNS劫持
+
+域名劫持就是在劫持的网络范围内拦截域名解析的请求，分析请求的域名，把审查范围以外的请求放行，否则直接返回假的IP地址或者什么也不做使得请求失去响应，其效果就是对特定的网址不能访问或访问的是假网址。
+
+## 文件传送协议FTP
+## 动态主机配置协议
+## 电子邮件协议
