--- a/docs/分布式/负载均衡.md
+++ b/docs/分布式/负载均衡.md
@@ -2,7 +2,19 @@
 >**负载均衡（Load Balancing）**  
 >调度后方的多台机器，以统一的接口对外提供服务，承担此职责的技术组件被称为“负载均衡”。
 ## 四层负载均衡和七层负载均衡
+* 四层负载均衡工作在OSI模型的**传输层**，主要工作是**转发**，它在接收到客户端的流量以后通过修改数据包的地址信息将流量转发到应用服务器。主要**通过报文中的目标地址和端口**，再加上负载均衡设备设置的服务器选择方式，决定最终选择的内部服务器。
+
+* 七层负载均衡工作在OSI模型的**应用层**，因为它需要解析应用层流量，所以七层负载均衡在接到客户端的流量以后，还需要一个完整的TCP/IP协议栈。主要**通过报文中的真正有意义的应用层内容**，再加上负载均衡设备设置的服务器选择方式，决定最终选择的内部服务器。
+
+**区别**
+
+* 四层:客户端与服务端建立连接，负载均衡设备起到转发作用
+* 七层:负载均衡和客户端建立连接
 ## 负载均衡实现
+DNS > 数据链路层 > IP层 > Http层
+
+1. DNS
+2. 
 ## 负载均衡算法
 
 1. **随机算法**
