--- a/docs/计算机网络/传输层.md
+++ b/docs/计算机网络/传输层.md
@@ -12,17 +12,18 @@
 
 ### 三次握手  
 ![](https://community-header-1306990603.cos.ap-guangzhou.myqcloud.com/20220106104414.png)  
-* 假设 A 为客户端，B 为服务器端。
+
+**假设 A 为客户端，B 为服务器端**。
 
 1. 首先 B 处于 **LISTEN（监听）状态**，等待客户的连接请求。
 
-2. A 向 B 发送连接请求报文，SYN=1，ACK=0，选择一个初始的序列号 x。**(发送后处于SYN-SENT状态)**
+2. A 向 B 发送连接请求报文，SYN=1，ACK=0，选择一个初始的序列号 x。 **(发送后处于SYN-SENT状态)**
 
-3. B 收到连接请求报文，如果同意建立连接，则向 A 发送连接确认报文，SYN=1，ACK=1，确认号为 x+1，同时也选择一个初始的序号 y。**(发送后处于SYN-RCVD状态)**
+3. B 收到连接请求报文，如果同意建立连接，则向 A 发送连接确认报文，SYN=1，ACK=1，确认号为 x+1，同时也选择一个初始的序号 y。 **(发送后处于SYN-RCVD状态)**
 
 4. A 收到 B 的连接确认报文后，还要向 B 发出确认，确认号为 y+1，序号为 x+1。**此时报文可以携带客户端到服务器的数据** **(进入ESTABLISHED状态)**
 
-5. B 收到 A 的确认后，连接建立。**(进入ESTABLISHED状态)**  
+5. B 收到 A 的确认后，连接建立。 **(进入ESTABLISHED状态)**  
 >tips：注意第三次握手可以携带数据，前两次不可以  
 
   **Q:** 为什么是三次握手而不是两次/四次？  
@@ -63,19 +64,63 @@
   * 防止旧连接的数据包，等待2MSL确保原来连接的数据包在网络中自然消失；
   * 保证「被动关闭连接」的⼀⽅能被正确的关闭，即保证最后的 ACK 能让被动关闭⽅接收，从⽽帮助其正常关闭；（如果TIME_WAIT过短直接进入CLOESD,而客户端的最后一个ACK丢失，服务端会一直处在LAST_ACK）
 
-### 可靠传输（待补充）
-TCP使用重传机制实现可靠传输
-### 流量控制（待补充）
-通过滑动窗口
+### 可靠传输
+
+TCP实现可靠传输的机制有
+1. 重传机制
+2. 拥塞控制
+3. 序列号与确认应答
+
+这里对重传机制进行分析
+
+为解决数据包丢失，TCP采用重传机制进行解决，常见的重传机制如下
+
+1. **超时重传**
+
+TCP会在数据包丢失或者确认应答丢失时发生超时重传，超时时间以RTO表示，略大于RTT(往返时延)的值。
+
+>Linux下通过采样RTT和RTT的波动范围进行平滑计算并加权得到RTO
+
+如果超时重发的数据再次超时，**TCP的策略是超时间隔加倍**
+
+2. **快速重传**
+
+超时重传可能存在周期长的问题，而**快速重传以数据量为驱动**，收到三个相同的ACK报文时进行重传。
+
+3. **SACK(选择性确认)**
+
+为解决重传哪些报文的问题，TCP头部选项字段加入了`SACK`，可以将缓存的地图发送给发送方，发送方依据地图**只重传丢失的数据**。
+
+>SACK需要双方都支持，Linux下通过net.ipv4.tcp_sack打开该功能(Linux2.4后默认打开)
+
+4. **D-SACK**
+
+
+D-SACK通过SACK告诉发送方有哪些数据被重复接收
+
+>Linux下通过net.ipv4.tcp_dsack打开该功能(Linux2.4后默认打开)
+
+### 流量控制
+
+如果每发送一个消息就要等待确认应答，效率会很低，因此TCP引入了滑动窗口的概念，**窗口大小就是值无需等待确认应答，而可以继续发送数据的最大值**
+
+窗口大小由接收方的窗口大小决定，发送窗口和接收窗口是约等于的关系。
+
+**窗口关闭的死锁现象解决**
+
+当窗口为0时，就会阻止发送方给接收方传递数据，接收方通过ACK报文进行通告。接收方处理完后，发送窗口非0的ACK报文。如果窗口非0的ACK报文丢失，会导致死锁现象。
+
+TCP为每个连接设置持续定时器，当连接一方收到零窗口通知，计时器就会启动。如果计时器超时，就会发送窗口探测报文，收到该报文的一方给出自己的接收窗口大小。
+
+
+
 ### 拥塞控制
 在⽹络出现拥堵时，如果继续发送⼤量数据包，可能会导致数据包时延、丢失等，这时 TCP 就会重传数据，但是
-⼀重传就会导致⽹络的负担更重，于是会导致更⼤的延迟以及更多的丢包，这个情况就会进⼊恶性循环被不断地放
-⼤....
+⼀重传就会导致⽹络的负担更重，于是会导致更⼤的延迟以及更多的丢包，这个情况就会进⼊恶性循环被不断地放大 ....
 
 所以，TCP 不能忽略⽹络上发⽣的事，它被设计成⼀个⽆私的协议，当⽹络发送拥塞时，TCP 会自我牺牲，降低发送的数据  
 于是，就有了拥塞控制，控制的⽬的就是避免「发送⽅」的数据填满整个⽹络  
-发送方需要维护一个**拥塞窗口cwnd**  
-此时发送窗口`swnd=min（cwnd，rwnd）`
+发送方需要维护一个**拥塞窗口cwnd**  ，此时发送窗口`swnd=min（cwnd，rwnd）`
 #### 慢启动
 当发送方每收到一个ACK，拥塞窗口cwnd的大小就会加1,因此每轮cwnd都会加倍，此时cwnd呈指数增长  
 
@@ -123,7 +168,23 @@ TCP使用重传机制实现可靠传输
 ##### CLOSE_WAIT
 处于CLOSE_WAIT状态说明对方关闭连接后自己没有进一步发出ack信号，也就是程序没有检测到或者忘记需要关闭连接，这时建议查一下代码。
 #### TCP粘包与拆包
-挖个坑
+
+TCP 是基于字节流的，数据块是没有边界、没有结构的字节流，因此可能产生粘包：
+1. 发送方为了将多个发往接收端的包，更有效的发到对方，使用了优化方法（Nagle算法），将多次间隔较小、数据量小的数据包，合并成一个大的数据包一次性发送。
+2. 接收方不能及时读取数据，导致缓冲区中的多个包粘连。
+
+**解决方法**
+
+1. 发送方关闭 Nagle 算法
+2. 应用层定义消息边界，最常见的两种解决方案就是基于长度或者基于终结符，而基于长度的实现有两种方式：固定长度和非固定长度，非固定长度需要在应用层协议的协议头增加表示负载长度的字段，如HTTP协议。
+
+需要注意的是，如果关闭Nagle算法，容易导致**糊涂窗口综合症**
+
+>**糊涂窗口综合症**：当接收窗口只有几个字节，而发送方仍然发送。因为TCP+IP头部有40个字节，这样导致资源浪费，而Nagle算法避免发送方发送小数据。
+
+当然，也可以使用接收方不通告小窗口的方法，策略如下：当窗口大小小于min（MSS,缓存空间/2）,直接通告窗口为0.
+
+>UDP面向报文，不合并不拆分，所以不会粘包
 #### SYN攻击
 ##### 概念
 服务端每收到一个SYN报文，就会进入SYN_RCVD状态，但发送出去的ACK+SYN报文如果没得到ACK应答，久了就会占满服务端的SYN接收队列（未连接队列），耗费CPU和内存资源  
