--- a/docs/操作系统/进程.md
+++ b/docs/操作系统/进程.md
@@ -28,6 +28,18 @@
 4. 错误返回码：系统调用或库函数发生错误时，会设置全局变量 errno，各个线程的错误返回码应该是独立的
 5. 信号屏蔽码：每个线程所感兴趣的信号不同，所以线程的信号屏蔽码应该由线程自己管理；但每个线程都共享本进程的信号处理器
 
+
+### PCB
+
+进程控制块，主要包含以下内容
+* 进程的描述信息，比如进程的名称，标识符，
+* 处理机的状态信息，当程序中断是保留此时的信息，以便 CPU 返回时能从断点执行
+* 进程调度信息，比如阻塞原因，状态，优先级等等
+* 进程控制和资源占用，同步通信机制，链接指针（指向队列中下一个进程的 PCB 地址）
+
+其作用如下：
+* PCB是进程实体的一部分，是进程的唯一标识符，是操作系统中最重要的数据结构
+* 由于它的存在，使得多道程序环境下，不能独立运行的程序成为一个能独立运行的基本单位，使得程序可以并发执行
 ### Linux中的进程与线程
 Linux中不区分进程和线程，均使用`do_fork`系统函数创建，只是对一些系统资源，如虚拟内存，进程ID，文件描述符等资源共享程度不同。
 >父子进程仅共享程序文本段
