--- a/docs/LeetCode/目录.md
+++ b/docs/LeetCode/目录.md
@@ -1,3 +1,3 @@
-* [TOP200](LeetCode/Top200/目录.md)
+* [TOP200+Hot100](LeetCode/Hot100/目录.md)
 * [排序](/LeetCode/排序/目录.md)
 * [常用模板](/LeetCode/常用模板.md)
