--- a/docs/LeetCode/Hot100/目录.md
+++ b/docs/LeetCode/Hot100/目录.md
@@ -16,3 +16,30 @@
     * [76. 最小覆盖子串 ](/LeetCode/Hot100/滑动窗口/76.%20最小覆盖子串%20.md) 
     * [239. 滑动窗口最大值](/LeetCode/Hot100/滑动窗口/239.%20滑动窗口最大值.md) 
     * [438. 找到字符串中所有字母异位词](/LeetCode/Hot100/滑动窗口/438.%20找到字符串中所有字母异位词.md) 
+
+* 回溯
+    * [22. 括号生成](/LeetCode/Hot100/回溯/22.%20括号生成.md)
+    * [37. 解数独](/LeetCode/Hot100/回溯/37.%20解数独.md)
+    * [39. 组合总和](/LeetCode/Hot100/回溯/39.%20组合总和.md)
+    * [40.组合总和2](/LeetCode/Hot100/回溯/40.组合总和2.md)
+    * [46. 全排列](/LeetCode/Hot100/回溯/46.%20全排列.md)
+    * [47 全排列2](/LeetCode/Hot100/回溯/47%20全排列2.md)
+    * [51 N皇后](/LeetCode/Hot100/回溯/51%20N皇后.md)
+    * [77. 组合 ](/LeetCode/Hot100/回溯/77.%20组合%20.md)
+    * [78.子集](/LeetCode/Hot100/回溯/78.子集.md)
+    * [89.格雷编码](/LeetCode/Hot100/回溯/89.格雷编码.md)
+    * [93 复原IP地址](/LeetCode/Hot100/回溯/93%20复原IP地址.md)
+    * [131. 分割回文串 ](/LeetCode/Hot100/回溯/131.%20分割回文串%20.md)
+    * [140. 单词拆分 II ](/LeetCode/Hot100/回溯/140.%20单词拆分%20II%20.md)
+    * [301. 删除无效的括号](/LeetCode/Hot100/回溯/301.%20删除无效的括号.md)
+
+* 双指针
+    * [11. 盛最多水的容器](/LeetCode/Hot100/双指针/11.%20盛最多水的容器.md)
+    * [15. 三数之和 ](/LeetCode/Hot100/双指针/15.%20三数之和%20.md)
+    * [31. 下一个排列 ](/LeetCode/Hot100/双指针/31.%20下一个排列%20.md)
+    * [42. 接雨水 ](/LeetCode/Hot100/双指针/42.%20接雨水%20.md)
+    * [75.颜色分类](/LeetCode/Hot100/双指针/75.颜色分类.md)
+    * [142. 环形链表 II](/LeetCode/Hot100/双指针/142.%20环形链表%20II.md)
+    * [143. 重排链表 ](/LeetCode/Hot100/双指针/143.%20重排链表%20.md)
+    * [287.寻找重复数](/LeetCode/Hot100/双指针/287.寻找重复数.md)
+    * [581. 最短无序连续子数组 ](/LeetCode/Hot100/双指针/581.%20最短无序连续子数组%20.md)
