--- a/docs/框架/Netty/目录.md
+++ b/docs/框架/Netty/目录.md
@@ -1,6 +1,5 @@
 Netty是一个基于NIO的网络框架
-* [IO模型](/IO/io模型.md)
-* [Netty模型](/Netty/Netty模型.md)
-* [Netty核心模块组件](/Netty/Netty核心模块组件.md)
-* [Netty心跳机制](/Netty/Netty心跳机制.md)
-* [Netty粘包拆包](/Netty/Netty粘包拆包.md)
+* [Netty模型](/框架/Netty/Netty模型.md)
+* [Netty核心模块组件](/框架/Netty/Netty核心模块组件.md)
+* [Netty心跳机制](/框架/Netty/Netty心跳机制.md)
+* [Netty粘包拆包](/框架/Netty/Netty粘包拆包.md)
