--- a/docs/LeetCode/Hot100/目录.md
+++ b/docs/LeetCode/Hot100/目录.md
@@ -18,6 +18,7 @@
     * [438. 找到字符串中所有字母异位词](/LeetCode/Hot100/滑动窗口/438.%20找到字符串中所有字母异位词.md) 
 
 * 回溯
+    * [17. 电话号码的字母组合](/LeetCode/Hot100/回溯/17.%20电话号码的字母组合.md)
     * [22. 括号生成](/LeetCode/Hot100/回溯/22.%20括号生成.md)
     * [37. 解数独](/LeetCode/Hot100/回溯/37.%20解数独.md)
     * [39. 组合总和](/LeetCode/Hot100/回溯/39.%20组合总和.md)
@@ -32,6 +33,7 @@
     * [131. 分割回文串 ](/LeetCode/Hot100/回溯/131.%20分割回文串%20.md)
     * [140. 单词拆分 II ](/LeetCode/Hot100/回溯/140.%20单词拆分%20II%20.md)
     * [301. 删除无效的括号](/LeetCode/Hot100/回溯/301.%20删除无效的括号.md)
+    * [437. 路径总和 III ](/LeetCode/Hot100/回溯/437.%20路径总和%20III%20.md)
 
 * 双指针
     * [11. 盛最多水的容器](/LeetCode/Hot100/双指针/11.%20盛最多水的容器.md)
