--- a/docs/操作系统/目录.md
+++ b/docs/操作系统/目录.md
@@ -1,4 +1,7 @@
 * [进程](/操作系统/进程.md)
+* [内核与用户态](/操作系统/内核与用户态.md)
 * [死锁](/操作系统/死锁.md)
 * [内存管理](/操作系统/内存管理.md)
 * [零拷贝](/操作系统/零拷贝.md)
+* [IO多路复用](/操作系统/IO/IO多路复用.md)
+* [IO模型](/操作系统/IO/io模型.md)
