--- a/docs/设计模式/代理模式.md
+++ b/docs/设计模式/代理模式.md
@@ -19,10 +19,98 @@
 Java中的代理按照代理类生成时机不同又分为静态代理和动态代理。静态代理代理类在编译期就生成，而动态代理代理类则是在Java运行时动态生成。动态代理又有JDK代理和CGLib代理两种
 
 ### JDK代理
-举个🌰
+
 
 在java的java.lang.reflect包下提供了一个Proxy类和一个InvocationHandler接口，通过这个类和这个接口可以生成JDK动态代理类和动态代理对象。
 
+这里以RPC client为🌰，客户端通过`RpcClientProxy`调用远程方法，对于客户端来说，它只需要知道方法的参数，对于网络传输等细节，由代理类`RpcClientProxy`进行实现。
+
+
 ```java
+public class RpcClientProxy implements InvocationHandler {
+
+    private static final Logger logger = LoggerFactory.getLogger(RpcClientProxy.class);
+
+    private final RpcClient client;
+
+    public RpcClientProxy(RpcClient client) {
+        this.client = client;
+    }
+
+    public <T> T getProxy(Class<T> clazz){
+        //创建代理对象
+        /*
+         newProxyInstance()方法参数说明：
+            ClassLoader loader：类加载器，用于加载代理类，使用真实对象的类加载器即可
+            Class<?>[] interfaces:真实对象所实现的接口，代理模式真实对象和代理对象实现相同的接口
+            InvocationHandler h：代理对象的调用处理程序
+        */
+        return (T) Proxy.newProxyInstance(clazz.getClassLoader(), new Class<?>[]{clazz}, this);
+    }
+         /*
+            InvocationHandler中invoke方法参数说明：
+               proxy：代理对象
+               method：对应于在代理对象上调用的接口方法的Method实例
+               args：代理对象调用接口方法时传递的实际参数
+         */
+    @Override
+    public Object invoke(Object proxy, Method method, Object[] args) {
+        logger.info("调用方法：{}#{}", method.getDeclaringClass().getName(), method.getName());
+        //将调用方法的参数信息封装
+        RpcRequest rpcRequest = new RpcRequest(UUID.randomUUID().toString(), method.getDeclaringClass().getName(),
+                method.getName(), args, method.getParameterTypes(), false);
+         //这里只是举例子，我们只需要知道代理类做的事就是发起远程调用并返回结果
+         RpcResponse rpcResponse = (RpcResponse) client.sendRequest(rpcRequest);
+
+         return rpcResponse.getData();
+        
+    }
+}
 ```
 ### CGLib代理
+
+CGLib**底层采用ASM字节码生成框架，使用字节码技术生成代理类**，在JDK1.6之前比使用Java反射效率要高。唯一需要注意的是，**CGLib不能对声明为final的类或者方法进行代理，因为CGLib原理是动态生成被代理类的子类。**
+
+在JDK1.6、JDK1.7、JDK1.8逐步对JDK动态代理优化之后，在调用次数较少的情况下，JDK代理效率高于CGLib代理效率，只有当进行大量调用的时候，JDK1.6和JDK1.7比CGLib代理效率低一点，但是到JDK1.8的时候，JDK代理效率高于CGLib代理。所以如果**有接口使用JDK动态代理，如果没有接口使用CGLIB代理。**
+
+**使用**
+
+1. 定义一个类；
+2. 自定义 `MethodInterceptor` 并重写 `intercept` 方法，`intercept `用于拦截增强被代理类的方法，和 JDK 动态代理中的 `invoke` 方法类似；
+3. 通过 `Enhancer` 类的 `create()`创建代理类；
+
+```java
+public class CglibProxyFactory{
+   public static Object getProxy(Class<?> clazz){
+      //创建动态代理增强类
+      Enhancer enhancer=new Enhancer();
+      //设置类加载器
+      enhancer.setClassLoader(clazz.getClassLoader());
+      //设置被代理类
+      enhancer.setSuperclass(clazz);
+      //设置方法拦截器
+      enhancer.setCallback(new DebugMethodInterceptor());
+      //创建代理类
+      return enhancer.create();
+   }
+}
+```
+
+```java
+public class DebugMethodInterceptor implements MethodInterceptor{
+   /*
+      o：   代理对象
+      method： 被拦截的方法
+      args：   方法入参
+      methodProxy： 调用原始方法
+
+   */
+   @Override
+   public Object intercept(Object o,Method method,Object[]args,MethodProxy methodProxy){
+      //调用的方法
+      Object object=methodProxy.invokeSuper(o,args);
+
+      return Object;
+   }
+}
+```
