--- a/docs/操作系统/内核与用户态.md
+++ b/docs/操作系统/内核与用户态.md
@@ -15,20 +15,22 @@
 * 进程控制。完成进程的创建、撤销、阻塞及唤醒等功能。
 * 进程通信。完成进程之间的消息传递或信号传递等功能。
 * 内存管理。完成内存的分配、回收以及获取作业占用内存区大小及地址等功能。
+
+
 ## 陷入内核态的方式
 
-1. 系统调用(trap)
+1. **系统调用(trap)**
 
 用户态进程主动要求切换到内核态的一种方式,用户态进程通过系统调用申请使用操作系统提供的服务程序完成工作，比如 read 操作.而系统调用的机制其核心还是使用了操作系统为用户特别开放的一个中断来实现，例如Linux的int 80h中断。
 
 
-2. 中断(interrupt)
+2. **中断(interrupt)**
 
 中断由处理器外部的硬件产生，不是执行某条指令的结果，也无法预测发生时机。由于中断独立于当前执行的程序，因此中断是异步事件。
 
 中断包括 I/O 设备发出的 I/O 中断、各种定时器引起的时钟中断、调试程序中设置的断点等引起的调试中断等。
 
-3. 异常(exception)
+3. **异常(exception)**
 
 异常是一种错误情况，是执行当前指令的结果，可能被错误处理程序修正，也可能直接终止应用程序。异常是同步的。
 
