--- a/docs/操作系统/内核与用户态.md
+++ b/docs/操作系统/内核与用户态.md
@@ -43,3 +43,33 @@
 
 
 这3种方式是系统在运行时由用户态转到内核态的最主要方式，其中系统调用可以认为是用户进程主动发起的，异常和外围设备中断则是被动的。
+
+
+## 堆和栈
+
+### 栈
+
+用户栈其实就是函数调用栈，作用主要是：
+
+* 保存函数的局部变量
+* 保存某些寄存器的值
+* 向被调用函数传递参数
+* 返回函数的返回值
+* 保存函数的返回地址
+
+
+每个函数在执行过程中都需要使用一块栈内存用来保存上述这些值，这块栈内存为该函数的栈帧（stack frame）。栈的增长和收缩由编译器插入的代码自动完成，随着函数的调用而分配，随函数的返回而自动释放。程序员无需关心，这一点与堆不同。
+
+### 堆
+
+栈内存的分配需要实现确定其大小，而堆内存允许程序在运行时动态申请某个大小的内存空间。申请的内存在函数退出后依然保留，需要手动释放。C 语言中的 malloc / free 就是从堆中分配 / 释放内存，操作系统通过一个记录空闲内存地址的链表来管理堆内存。
+
+如果反复向操作系统申请堆内存而不释放，会导致内存泄漏。在 C / C++ 中，必须由程序员手动释放堆内存。而 Java / Golang 中有垃圾回收器，会定期主动回收内存。但是即使有垃圾回收器，也有内存泄漏的风险，比如长期持有某个大对象的引用。
+
+### 堆和栈区别
+
+* **增长方向**：栈向低地址方向增长，堆向高地址方向增长
+* **申请回收**：栈自动分配和回收，堆需要手动申请和释放
+* **生命周期**：栈的数据仅存在于函数运行过程中，堆的数据只要不释放就一直存在
+* **连续分配**：栈是连续分配的，堆是不连续的，容易产生内存碎片
+* **空间大小**：栈的大小是有限的（如默认 8M，Linux 上通过 ulimit -s 查看），而堆的空间较大，受限于系统中有效的虚拟内存
