--- a/docs/数据库/目录.md
+++ b/docs/数据库/目录.md
@@ -1,5 +1,9 @@
 * MySQL   
     * [数据库基础](/数据库/数据库基础.md)
+    * [MYSQL日志](/数据库/MYSQL日志.md)
+    * [MYSQL索引](/数据库/MYSQL索引.md)
+    * [MYSQL优化](/数据库/MYSQL优化.md)
+    * [SQL语法](/数据库/SQL语法.md)
 
 * Redis
     * [Redis](/数据库/Redis.md)
