--- a/docs/数据库/数据库基础.md
+++ b/docs/数据库/数据库基础.md
@@ -78,7 +78,7 @@ MYSQL提供了两种封锁粒度：行级锁以及表级锁。
 
 ### 封锁协议
 #### 三级封锁协议
-* 一级封锁协议:事务在修改之前必须先对其加X锁，直到事物结束后释放。**解决丢失修改问题**(即两个事务不能同时对一个数据进行修改，避免修改被覆盖)
+* 一级封锁协议:事务在修改之前必须先对其加X锁，**直到事务结束后释放。**解决丢失修改问题(即两个事务不能同时对一个数据进行修改，避免修改被覆盖)
 * 二级封锁协议:在一级的基础上，事务在读取数据之前必须先加S锁，**读完后释放**。可以解决脏读问题（如果已经有事务在修改数据，就意味着已经加了X锁，此时想要读取数据的事务并不能加S锁，也就无法进行读取，避免了读取脏数据）；
 * 三级封锁协议:在二级的基础上，事务在读取数据之前必须先加S锁，**直到事务结束才能释放**。可以解决不可重复读问题（避免了在事务结束前其它事务对数据加X锁进行修改，保证了事务期间数据不会被其它事务更新）
 
