--- a/docs/LeetCode/Hot100/目录.md
+++ b/docs/LeetCode/Hot100/目录.md
@@ -9,6 +9,16 @@
     * [33.搜索旋转排序数组](/LeetCode/Hot100/二分/33.搜索旋转排序数组.md)
     * [34.在排序数组中查找元素的第一个和最后一个位置](/LeetCode/Hot100/二分/34.在排序数组中查找元素的第一个和最后一个位置.md)
     * [81. 搜索旋转排序数组 II](/LeetCode/Hot100/二分/81.%20搜索旋转排序数组%20II.md)
+    * [154. 寻找旋转排序数组中的最小值 II](/LeetCode/Hot100/二分/154.%20寻找旋转排序数组中的最小值%20II.md)
+    * [162. 寻找峰值](/LeetCode/Hot100/二分/162.%20寻找峰值.md)
+
+* 哈希表
+    * [1. 两数之和](/LeetCode/Hot100/哈希表/1.%20两数之和.md)
+    * [41. 缺失的第一个正数](/LeetCode/Hot100/哈希表/41.%20缺失的第一个正数.md)
+    * [49. 字母异位词分组](/LeetCode/Hot100/哈希表/49.%20字母异位词分组.md)
+    * [128. 最长连续序列](/LeetCode/Hot100/哈希表/128.%20最长连续序列.md)
+    * [448. 找到所有数组中消失的数字](/LeetCode/Hot100/哈希表/448.%20找到所有数组中消失的数字.md)
+
 
 * 滑动窗口
     * [3. 无重复字符的最长子串](/LeetCode/Hot100/滑动窗口/3.%20无重复字符的最长子串.md) 
@@ -26,9 +36,9 @@
     * [46. 全排列](/LeetCode/Hot100/回溯/46.%20全排列.md)
     * [47 全排列2](/LeetCode/Hot100/回溯/47%20全排列2.md)
     * [51 N皇后](/LeetCode/Hot100/回溯/51%20N皇后.md)
+    * [60.排列序列](/LeetCode/Hot100/回溯/60.%20排列序列.md)
     * [77. 组合 ](/LeetCode/Hot100/回溯/77.%20组合%20.md)
     * [78.子集](/LeetCode/Hot100/回溯/78.子集.md)
-    * [89.格雷编码](/LeetCode/Hot100/回溯/89.格雷编码.md)
     * [93 复原IP地址](/LeetCode/Hot100/回溯/93%20复原IP地址.md)
     * [131. 分割回文串 ](/LeetCode/Hot100/回溯/131.%20分割回文串%20.md)
     * [140. 单词拆分 II ](/LeetCode/Hot100/回溯/140.%20单词拆分%20II%20.md)
@@ -38,10 +48,52 @@
 * 双指针
     * [11. 盛最多水的容器](/LeetCode/Hot100/双指针/11.%20盛最多水的容器.md)
     * [15. 三数之和 ](/LeetCode/Hot100/双指针/15.%20三数之和%20.md)
+    * [19. 删除链表的倒数第 N 个结点](/LeetCode/Hot100/双指针/19.%20删除链表的倒数第%20N%20个结点.md)
     * [31. 下一个排列 ](/LeetCode/Hot100/双指针/31.%20下一个排列%20.md)
     * [42. 接雨水 ](/LeetCode/Hot100/双指针/42.%20接雨水%20.md)
+    * [56. 合并区间](/LeetCode/Hot100/双指针/56.%20合并区间.md)
     * [75.颜色分类](/LeetCode/Hot100/双指针/75.颜色分类.md)
+    * [80. 删除有序数组中的重复项 II](/LeetCode/Hot100/双指针/80.%20删除有序数组中的重复项%20II.md)
     * [142. 环形链表 II](/LeetCode/Hot100/双指针/142.%20环形链表%20II.md)
     * [143. 重排链表 ](/LeetCode/Hot100/双指针/143.%20重排链表%20.md)
+    * [283. 移动零](/LeetCode/Hot100/双指针/283.%20移动零.md)
     * [287.寻找重复数](/LeetCode/Hot100/双指针/287.寻找重复数.md)
     * [581. 最短无序连续子数组 ](/LeetCode/Hot100/双指针/581.%20最短无序连续子数组%20.md)
+
+* 排序
+    * [23. 合并K个升序链表](/LeetCode/Hot100/排序/23.%20合并K个升序链表.md)
+    * [147. 对链表进行插入排序](/LeetCode/Hot100/排序/147.%20对链表进行插入排序.md)
+    * [148. 排序链表 ](/LeetCode/Hot100/排序/148.%20排序链表%20.md)
+
+* 前缀和
+    * [238. 除自身以外数组的乘积 ](/LeetCode/Hot100/前缀和/238.%20除自身以外数组的乘积%20.md)
+    * [437. 路径总和 III  ](/LeetCode/Hot100/前缀和/437.%20路径总和%20III%20.md)
+    * [560. 和为 K 的子数组  ](/LeetCode/Hot100/前缀和/560.%20和为%20K%20的子数组%20.md)
+
+* 区间DP
+    * [5. 最长回文子串 ](/LeetCode/Hot100/区间DP/5.%20最长回文子串%20.md)
+    * [32. 最长有效括号 ](/LeetCode/Hot100/区间DP/32.%20最长有效括号%20.md)
+    * [647. 回文子串 ](/LeetCode/Hot100/区间DP/647.%20回文子串%20.md)
+
+* 树
+    * [95. 不同的二叉搜索树 II](/LeetCode/Hot100/树/95.%20不同的二叉搜索树%20II.md)
+    * [98. 验证二叉搜索树 ](/LeetCode/Hot100/树/98.%20验证二叉搜索树%20.md)
+    * [105. 从前序与中序遍历序列构造二叉树](/LeetCode/Hot100/树/105.%20从前序与中序遍历序列构造二叉树.md)
+    * [114. 二叉树展开为链表 ](/LeetCode/Hot100/树/114.%20二叉树展开为链表%20.md)
+    * [124. 二叉树中的最大路径和](/LeetCode/Hot100/树/124.%20二叉树中的最大路径和.md)
+    * [236. 二叉树的最近公共祖先 ](/LeetCode/Hot100/树/236.%20二叉树的最近公共祖先%20.md)
+    * [450. 删除二叉搜索树中的节点](/LeetCode/Hot100/树/450.%20删除二叉搜索树中的节点.md)
+    * [538. 把二叉搜索树转换为累加树](/LeetCode/Hot100/树/538.%20把二叉搜索树转换为累加树.md)
+
+* 数据结构
+    * [146. LRU 缓存 ](/LeetCode/Hot100/数据结构/146.%20LRU%20缓存%20.md) 
+    * [208. 实现 Trie (前缀树)](/LeetCode/Hot100/数据结构/208.%20实现%20Trie%20(前缀树).md)
+    * [460.LFU](/LeetCode/Hot100/数据结构/460.LFU.md)
+
+* 位运算
+    * [50. Pow(x, n)](/LeetCode/Hot100/位运算/50.%20Pow(x,%20n).md)
+    * [89.格雷编码](/LeetCode/Hot100/位运算/89.格雷编码.md)
+    * [137. 只出现一次的数字 II](/LeetCode/Hot100/位运算/137.%20只出现一次的数字%20II.md)
+    * [191. 位1的个数](/LeetCode/Hot100/位运算/191.%20位1的个数.md)
+    * [338. 比特位计数](/LeetCode/Hot100/位运算/338.%20比特位计数.md)
+    * [461. 汉明距离](/LeetCode/Hot100/位运算/461.%20汉明距离.md)
