--- a/docs/操作系统/内存管理.md
+++ b/docs/操作系统/内存管理.md
@@ -51,7 +51,7 @@
 ![](https://community-header-1306990603.cos.ap-guangzhou.myqcloud.com/20220114105121.png)
 
 
- **物理地址E=b $\times$ L+W**
+ 物理地址**E=b $\times$ L+W**
 
 
 ### 2. 基本分段存储管理方式
