--- a/docs/LeetCode/排序/目录.md
+++ b/docs/LeetCode/排序/目录.md
@@ -8,6 +8,7 @@
 | **冒泡排序** |    O($n^2$)    |     O($n$)     |    O($n^2$)    |     O(1)     |  稳定  |
 | **归并排序** |  O($nlog_2n$)  |  O($nlog_2n$)  |  O($nlog_2n$)  |    O($n$)    |  稳定  |
 | **快速排序** |  O($nlog_2n$)  |  O($nlog_2n$)  |    O($n^2$)    | O($nlog_2n$) | 不稳定 |
+| **归并排序** |  O($nlog_2n$)  |  O($nlog_2n$)  |  O($nlog_2n$)  |    O($1$)    | 不稳定  |
 ## 使用场景
 ## 各个排序算法详细
 * [插入排序](/LeetCode/排序/插入排序.md)
