--- a/docs/LeetCode/常用模板.md
+++ b/docs/LeetCode/常用模板.md
@@ -39,3 +39,50 @@
 ```java
 
 ```
+
+## 输入输出
+```java
+import java.io.*;
+
+public class Main {
+	public static StreamTokenizer in = new StreamTokenizer(new BufferedReader(new InputStreamReader(System.in),32768));
+	public static PrintWriter out = new PrintWriter(new OutputStreamWriter(System.out));
+
+	public static double nextDouble() throws IOException{
+        in.nextToken();
+        return in.nval;
+        }
+	public static float nextFloat() throws IOException{ 
+        in.nextToken();
+        return (float)in.nval;
+        }
+	public static int nextInt() throws IOException{
+        in.nextToken();
+        return (int)in.nval;
+        }
+	public static String next() throws IOException{
+        in.nextToken();
+        return in.sval;
+        }
+
+	public static void main(String[] args) throws IOException{
+//		获取输入
+		while(in.nextToken()!=StreamTokenizer.TT_EOF){
+			break;
+		}
+		int x = (int)in.nextToken();  //第一个数据应当通过nextToken()获取
+		
+		int y = nextInt();
+		float f = nextFloat();
+		double d = nextDouble();
+		String str = next();
+
+//		输出
+		out.println("abc");
+		out.flush();
+		out.close();
+	}
+}
+
+
+```
