--- a/docs/计算机网络/应用层.md
+++ b/docs/计算机网络/应用层.md
@@ -43,6 +43,24 @@ DNS用于将域名解析为IP地址
 
 域名劫持就是在劫持的网络范围内拦截域名解析的请求，分析请求的域名，把审查范围以外的请求放行，否则直接返回假的IP地址或者什么也不做使得请求失去响应，其效果就是对特定的网址不能访问或访问的是假网址。
 
+### HTTPDNS
+
+**背景**：传统DNS存在域名缓存和解析延迟等问题
+
+**概念**：HTTPDNS其实就是，不走传统的 DNS 解析，而是自己搭建基于 HTTP 协议的 DNS 服务器集群，分布在多个地点和多个运营商。当客户端需要 DNS 解析的时候，直接通过HTTP 协议进行请求这个服务器集群，得到就近的地址。
+
+**工作模式**：
+
+在客户端的 SDK 里动态请求服务端，获取 HTTPDNS 服务器的 IP 列表，缓存到本地。随着不断地解析域名，SDK 也会在本地缓存 DNS 域名解析的结果。
+
+当手机应用要访问一个地址的时候，首先看是否有本地的缓存，如果有就直接返回。这个缓存和本地 DNS 的缓存不一样的是，这个是手机应用自己做的，而非整个运营商统一做的。如何更新、何时更新，手机应用的客户端可以和服务器协调来做这件事情。
+
+如果本地没有，就需要请求 HTTPDNS 的服务器，在本地 HTTPDNS 服务器的 IP 列表中，选择一个发出 HTTP 的请求，会返回一个要访问的网站的 IP 列表。
+
+手机客户端自然知道手机在哪个运营商、哪个地址。由于是直接的 HTTP 通信，HTTPDNS服务器能够准确知道这些信息，因而可以做精准的全局负载均衡。
+
+![](https://community-header-1306990603.cos.ap-guangzhou.myqcloud.com/20220225104118.png)
+
 ## 文件传送协议FTP
 ## 动态主机配置协议
 ## 电子邮件协议
