--- a/docs/操作系统/进程.md
+++ b/docs/操作系统/进程.md
@@ -43,8 +43,15 @@
 ### Linux中的进程与线程
 Linux中不区分进程和线程，均使用`do_fork`系统函数创建，只是对一些系统资源，如虚拟内存，进程ID，文件描述符等资源共享程度不同。
 
-### 
 >父子进程仅共享程序文本段
+
+**Linux如何通过kill结束进程？**
+
+1. `kill -pid`  如果进程启动了子进程，只杀死父进程，子进程仍在运行，因此仍消耗资源。为了防止这些所谓的“僵尸进程”，应确保在杀死父进程之前，先杀死其所有的子进程。`ps -ef | grep xx `找到要杀死的父进程和子进程
+2. `kill -TERM PPID`  给父进程发送一个TERM信号，试图杀死它和它的子进程
+3. `kill -HUP PID`     该命令让Linux和缓的执行进程关闭，然后立即重启。在配置应用程序的时候，这个命令很方便，在对配置文件修改后需要重启进程时就可以执行此命令。
+4.  `kill -9 PID`    迫使进程在运行时突然终止，进程在结束后不能自我清理。危害是导致系统资源无法正常释放，一般不推荐使用，除非其他办法都无效。
+
 ## 进程通信方式
 |   方式   |    传输的信息量    |    使用场景    |                                 关键词                                 |
 | :------: | :----------------: | :------------: | :--------------------------------------------------------------------: |
@@ -55,6 +62,7 @@ Linux中不区分进程和线程，均使用`do_fork`系统函数创建，只是
 | 共享内存 |        大量        |    多个进程    |                内存映射 / 简单快速 / 操作系统不保证同步                |
 | 消息队列 | 比信号多，但有限制 |      任何      |               有格式 / 按消息类型过滤 / 操作系统负责同步               |
 |  套接字  |        大量        | 不同/相同主机的进程 |                 读缓存区 / 写缓冲区 / 操作系统负责同步                 |
+
 
 
 ### 1. 管道/匿名管道
@@ -117,8 +125,32 @@ Linux中不区分进程和线程，均使用`do_fork`系统函数创建，只是
 * 进程通过 socket 把消息发送到网络层中，网络层通过主机地址将其发到目的主机，目的主机通过端口号发给对应进程
 * 操作系统提供创建 socket、发送、接收的系统调用，为每个 socket 设置发送缓冲区、接收缓冲区。
 
-## 进程同步
+## 进程线程同步方式
 
+1. **临界区**
+
+   通过对多线程的串行化来访问公共资源或一段代码，速度快，适合控制数据访问。
+   * 当多个线程访问一个独占性共享资源时，可以使用临界区对象。拥有临界区的线程可以访问被保护起来的资源或代码段，其他线程若想访问，则被挂起，直到拥有临界区的线程放弃临界区为止，以此达到用原子方式操 作共享资源的目的。
+   * **优点**：保证在某一时刻只有一个线程能访问数据
+   * **缺点**：只能用来同步本进程内的线程，而不可用来同步多个进程中的线程。
+
+2. **互斥量**
+
+   为协调共同对一个共享资源的单独访问而设计的。互斥量跟临界区很相似，比临界区复杂，互斥对象只有一个，只有拥有互斥对象的线程才具有访问资源的权限
+   * **优点**：使用互斥不仅仅能够在同一应用程序不同线程中实现资源的安全共享，而且可以在**不同应用程序的线程**之间实现对资源的安全共享。
+   * **缺点**：创建互斥量需要的资源更多
+
+3. **信号量**
+
+   为控制一个具有有限数量用户资源而设计。它允许多个线程在同一时刻访问同一资源，但是需要限制在同一时刻访问此资源的最大线程数目。互斥量是信号量的一种特殊情况，当信号量的最大资源数=1就是互斥量了。
+   * **优点**：适用于对Socket（套接字）程序中线程的同步。
+   * **缺点**：需要公共内存，不能用于分布式系统；不易管理。
+
+4. **事件**
+
+    用来通知线程有一些事件已发生，从而启动后继任务的开始。
+
+   
 ## 进程的调度
 
 ### 进程状态
